started replacement of old graphics system with SDLmm based one

--- a/TODO
+++ b/TODO
@@ -1,3 +1,2 @@
-See source/TODO for a list of things that should be done in the "programming
-department"
+See source/TODO for a list of things that should be done in the "programming department"
  
