--- a/TODO
+++ b/TODO
@@ -1,2 +1,7 @@
-See source/TODO for a list of things that should be done in the "programming department"
+There are always lots of things to do for ASC.
+Instead of maintaining a list in this place, please take a look at:
+- the bugzilla at www.asc-hq.org 
+- the forum, also at www.asc-hq.org
+- and if you play ASC, you will probably find some things on your own too ;-)
+
  
